  * Store a modified multipath.conf in the initrd if needed.
  * Close a race condition between creating the kdump initrd and
    restricting its file permissions to avoid information leak.
  * Change sysconfig.kdump defaults:
      o KDUMP_CONTINUE_ON_ERROR now defaults to true
      o KDUMP_DUMPLEVEL now defaults to 31
      o KDUMP_CPUS is considered EXPERIMENTAL and unstable
  * Improve the kdump kernel command line:
      o Disable zfcp LUN scan on s390(x)
      o Do not allocate hugepages
  * Include hpwdt kernel module in the kdump kernel if HP hardware is found.

0.8.4
-----
  * Do not reboot after taking a dump with fadump.
  * Add a new command to dump the configuration variables: dump_config
  * Configuration options can be passed via the kernel command line.
  * Add a helper script (kdump-bootloader.pl) for updating the boot
    loader configuration.
  * Support for kdump on S/390x.

0.8.3
-----
  * Update the text of the license (new FSF address).
  * Basic support for fadump (Firmware-assisted dump) on the IBM POWER
    architecture.

0.8.2
-----
  * Fix missing error reason (string representation  of errno) in the
    exception output.
  * Include the position of the input stream in the exception output.
  * Improve error message in Debuglink::openCompressed().
  * Fix invalid call of mkstemp() in Debuglink::openCompressed()
  * Do not use showmount (it is apparently no longer needed).
  * Improve the algorithm of finding kernel modules and programs
    needed to mount the dump directory.
  * Pass the correct "sysrq=" argument to the kdump kernel.
  * Add support for RSA keys when saving over SSH.
  * Do not re-generate kdump initrd on boot. Instead, hook into the
    normal mkinitrd run.
  * Adjust init-script actions to match LSB better.
  * Check remote host SSH key if available.
  * Allow dumping if the primary kernel was booted in EFI mode.
  * Correctly recognize ELF and compressed ELF kernel files.
  * Create KDUMP_SAVEDIR if non-existent.