@@ -9,6 +9,7 @@
  *      @usage   option usage flags (MKINITRD, KEXEC, DUMP)
  */
 
+DEFINE_OPT(KDUMP_FADUMP, Bool, false, MKINITRD)
 DEFINE_OPT(KDUMP_KERNELVER, String, "", KEXEC)
 DEFINE_OPT(KDUMP_CPUS, Int, 1, KEXEC | DUMP)
 DEFINE_OPT(KDUMP_COMMANDLINE, String, "", KEXEC)
